--- a/src/main/resources/templates/fragments/toolbar.html
+++ b/src/main/resources/templates/fragments/toolbar.html
@@ -14,7 +14,7 @@
         </a>
       </div>
       <div class="toolbar__right">
-        <th:block th:replace="~{fragments/localeSelect :: localeSelect}"></th:block>
+        <th:block th:replace="~{fragments/languageSelector :: languageSelector}"></th:block>
       </div>
     </div>
     <th:block
