--- a/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
+++ b/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
@@ -647,9 +647,9 @@ body,
   white-space: pre;
 }
 
-/* Locale Select */
+/* Language Selector */
 
-.menu-button-links button {
+.language-selector button {
   padding: 5px 10px;
   margin-bottom: 0;
   margin-right: 0;
@@ -665,35 +665,35 @@ body,
   box-shadow: none;
 }
 
-.menu-button-links button > span {
+.language-selector button > span {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   line-height: 1.3;
 }
 
-.menu-button-links .icon {
+.language-selector .icon {
   font-size: 2.4rem;
   margin-right: 0.8rem;
   display: none;
 }
 
 @media screen and (min-width: 401px) {
-  .menu-button-links .icon {
+  .language-selector .icon {
     display: inline;
   }
 }
 
-.menu-button-links button strong {
+.language-selector button strong {
   font-size: 16px;
 }
 
-.menu-button-links .small-text {
+.language-selector .small-text {
   font-size: 11px;
   font-weight: 500;
 }
 
-.menu-button-links [role="menu"] {
+.language-selector [role="menu"] {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -705,8 +705,8 @@ body,
   z-index: 3;
 }
 
-.menu-button-links [role="menuitem"],
-.menu-button-links [role="separator"] {
+.language-selector [role="menuitem"],
+.language-selector [role="separator"] {
   margin: 0;
   padding: 10px 15px;
   display: block;
@@ -715,24 +715,24 @@ body,
   font-size: 15px;
 }
 
-.translate-links {
+.language-selector .translate-links {
   display: none;
 }
 
-.translate-links a {
+.language-selector .translate-links a {
   color: #ffffff;
 }
 
-.translate-links * + * {
+.language-selector .translate-links * + * {
   margin-left: 1.5rem;
 }
 
 @media screen and (min-width: 601px) {
-  .translate-button.use-links-for-desktop {
+  .language-selector .translate-button.use-links-for-desktop {
     display: none;
   }
 
-  .translate-links.use-links-for-desktop {
+  .language-selector .translate-links.use-links-for-desktop {
     display: block;
   }
 }
