Add Accessible Language Selector  (#262)
Co-authored-by: Chibuisi Enyia <cenyia@codeforamerica.org>

--- a/src/main/resources/templates/fragments/toolbar.html
+++ b/src/main/resources/templates/fragments/toolbar.html
@@ -14,7 +14,7 @@
         </a>
       </div>
       <div class="toolbar__right">
-        <!--        <select th:replace="~{fragments/localeSelect :: localeSelect}"></select>-->
+        <th:block th:replace="~{fragments/languageSelector :: languageSelector}"></th:block>
       </div>
     </div>
     <th:block
