--- a/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
+++ b/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
@@ -279,6 +279,10 @@ url('/webjars/form-flow/0.0.1/fonts/MaterialIcons-Regular.svg') format('svg');
   font-size: 1.6rem;
 }
 
+.toolbar {
+  align-items: center;
+}
+
 .list--checkmark li:before {
   background-image: url('/webjars/form-flow/0.0.1/images/emojis/checkmark.png');
 }
@@ -641,4 +645,94 @@ body,
   line-height: 1.4;
   overflow-x: auto;
   white-space: pre;
+}
+
+/* Language Selector */
+
+.language-selector button {
+  padding: 5px 10px;
+  margin-bottom: 0;
+  margin-right: 0;
+  display: flex;
+  align-items: center;
+  position: relative;
+  background-color: white;
+  border: none;
+  font-size: 16px;
+  color: black;
+  border-radius: 5px;
+  line-height: 1;
+  box-shadow: none;
+}
+
+.language-selector button > span {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  line-height: 1.3;
+}
+
+.language-selector .icon {
+  font-size: 2.4rem;
+  margin-right: 0.8rem;
+  display: none;
+}
+
+@media screen and (min-width: 401px) {
+  .language-selector .icon {
+    display: inline;
+  }
+}
+
+.language-selector button strong {
+  font-size: 16px;
+}
+
+.language-selector .small-text {
+  font-size: 11px;
+  font-weight: 500;
+}
+
+.language-selector [role="menu"] {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: none;
+  position: absolute;
+  border: 2px solid #121111;
+  border-radius: 5px;
+  background-color: #ffffff;
+  z-index: 3;
+}
+
+.language-selector [role="menuitem"],
+.language-selector [role="separator"] {
+  margin: 0;
+  padding: 10px 15px;
+  display: block;
+  border: none;
+  color: #003865;
+  font-size: 15px;
+}
+
+.language-selector .translate-links {
+  display: none;
+}
+
+.language-selector .translate-links a {
+  color: #ffffff;
+}
+
+.language-selector .translate-links * + * {
+  margin-left: 1.5rem;
+}
+
+@media screen and (min-width: 601px) {
+  .language-selector .translate-button.use-links-for-desktop {
+    display: none;
+  }
+
+  .language-selector .translate-links.use-links-for-desktop {
+    display: block;
+  }
 }
