Change styles to make translate button align with HC button--small

--- a/src/main/resources/templates/fragments/languageSelector.html
+++ b/src/main/resources/templates/fragments/languageSelector.html
@@ -11,7 +11,7 @@
 ">
   <button type="button"
           id="language-menu"
-          class="button translate-button"
+          class="button button--small translate-button"
           th:classappend="${useLinksForDesktopView ? 'use-links-for-desktop' : ''}"
           aria-haspopup="true"
           aria-controls="language-menu-dropdown">
