--- a/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
+++ b/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
@@ -650,26 +650,20 @@ body,
 /* Language Selector */
 
 .language-selector button {
-  padding: 5px 10px;
   margin-bottom: 0;
   margin-right: 0;
   display: flex;
   align-items: center;
   position: relative;
-  background-color: white;
-  border: none;
-  font-size: 16px;
-  color: black;
-  border-radius: 5px;
-  line-height: 1;
   box-shadow: none;
+  border: none;
 }
 
 .language-selector button > span {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  line-height: 1.3;
+  line-height: 1;
 }
 
 .language-selector .icon {
@@ -685,11 +679,11 @@ body,
 }
 
 .language-selector button strong {
-  font-size: 16px;
+  font-size: 1.4rem;
 }
 
 .language-selector .small-text {
-  font-size: 11px;
+  font-size: 1.1rem;
   font-weight: 500;
 }
 
