--- a/src/main/resources/templates/fragments/languageSelector.html
+++ b/src/main/resources/templates/fragments/languageSelector.html
@@ -17,7 +17,7 @@
           aria-controls="language-menu-dropdown">
     <i class="icon icon-translate" aria-hidden="true"></i>
     <span>
-      <strong th:text="#{language-preferences.button}"></strong>
+      <span class="large-text" th:text="#{language-preferences.button}"></span>
       <span class="small-text"
             th:text="${#messages.msgOrNull('language-preferences.preview.second') == ''}
             ? #{language-preferences.preview.first}
