Limit accepted filetypes & validate them serverside
[#185599082, #185617186]

Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>
Co-authored-by: Lauren Kemperman <lkemperman@codeforamerica.org>

--- a/src/main/resources/templates/fragments/fileUploader.html
+++ b/src/main/resources/templates/fragments/fileUploader.html
@@ -247,9 +247,8 @@
       dictMaxFilesExceeded: [[#{upload-documents.error-maximum-number-of-files}]],
       dictInvalidFileType: [[#{upload-documents.error-invalid-file-type}]]
           + ' '
-          + [[${@environment.getProperty('form-flow.uploads.accepted-file-types')}]].toString().replaceAll(
-              ",", ", "),
-      acceptedFiles: [[${@environment.getProperty('form-flow.uploads.accepted-file-types')}]],
+          + [[${acceptedFileTypes}]],
+      acceptedFiles: [[${acceptedFileTypes}]],
       clickable: ".drag-and-drop-box",
       previewTemplate: `
             <div class="dz-preview dz-file-preview spacing-below-15">
