--- a/src/main/resources/templates/fragments/languageSelector.html
+++ b/src/main/resources/templates/fragments/languageSelector.html
@@ -4,7 +4,6 @@
      class="language-selector"
      th:with="
         lang=${#locale.toString()},
-        currentURL=${screen},
         appPropsLanguages=${#strings.replace(@environment.getProperty('form-flow.languages'), ' ', '')},
         supportedLanguages=${appPropsLanguages != null ? appPropsLanguages.split(',') : 'default'},
         useLinksForDesktopView=${#arrays.length(supportedLanguages) <= 3},
@@ -35,17 +34,17 @@
       role="menu"
       aria-labelledby="language-menu">
     <li th:each="language : ${supportedLanguages}" role="none">
-      <!--  TODO: set correct href in later ticket  -->
       <a th:text="${#messages.msg('language-preferences.link-text.' + language)}"
          th:lang="${language}"
-         th:href="'#'"
+         th:href="|?lang=${language}|"
          class="text--small language-option-track-click" role="menuitem"></a>
     </li>
   </ul>
   <nav th:aria-label="#{language-preferences.button}" class="translate-links"
        th:classappend="${useLinksForDesktopView ? 'use-links-for-desktop' : ''}">
     <a th:each="language : ${supportedLanguages}"
-       th:text="${#messages.msg('language-preferences.link-text.' + language)}" th:href="'#'"></a>
+       th:text="${#messages.msg('language-preferences.link-text.' + language)}"
+       th:href="|?lang=${language}|"></a>
   </nav>
   <noscript>
     <!-- When JavaScript is disabled, hide translate button and show translate links -->
