Fix demo banner spacing when nav links are present
Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>

--- a/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
+++ b/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
@@ -711,6 +711,7 @@ body,
 
 .language-selector .translate-links {
   display: none;
+  line-height: 1;
 }
 
 .language-selector .translate-links a {
