Expose as a service and inject to model

--- a/src/main/resources/templates/fragments/fileUploader.html
+++ b/src/main/resources/templates/fragments/fileUploader.html
@@ -53,8 +53,7 @@
   </div>
   <input type="hidden" th:name="${inputName}">
   <script src="/webjars/dropzone/5.9.3/dist/min/dropzone.min.js"></script>
-  <script th:inline="javascript"
-          th:with="acceptedFileTypeUtils=${T(formflow.library.utils.AcceptedFileTypeUtils).create()}">
+  <script th:inline="javascript">
     Dropzone.autoDiscover = false;
     window.dropzonePrefix = 'myDropZone';
     window['documentIcon'
@@ -248,9 +247,8 @@
       dictMaxFilesExceeded: [[#{upload-documents.error-maximum-number-of-files}]],
       dictInvalidFileType: [[#{upload-documents.error-invalid-file-type}]]
           + ' '
-          + [[${acceptedFileTypeUtils.acceptedFileTypes()}]].toString().replaceAll(
-              ",", ", "),
-      acceptedFiles: [[${acceptedFileTypeUtils.acceptedFileTypes()}]],
+          + [[${acceptedFileTypes}]],
+      acceptedFiles: [[${acceptedFileTypes}]],
       clickable: ".drag-and-drop-box",
       previewTemplate: `
             <div class="dz-preview dz-file-preview spacing-below-15">
