Adds JavaScript to prevent multiple form submissions
- Disables the submit button on forms after click

[#185364171]

--- a/src/main/resources/templates/fragments/libraryHead.html
+++ b/src/main/resources/templates/fragments/libraryHead.html
@@ -17,5 +17,6 @@
   <script src="/webjars/form-flow/0.0.1/js/honeycrisp.min.js"></script>
   <script src="/webjars/form-flow/0.0.1/js/formFlowDropZone.js"></script>
   <script src="/webjars/form-flow/0.0.1/js/formFlowLanguageSelector.js"></script>
+  <script src="/webjars/form-flow/0.0.1/js/formFlowDisableMultipleFormSubmit.js"></script>
 </th:block>
 </html>
