Add javascript to disable follow up question inputs if they are not shown

--- a/src/main/resources/templates/fragments/libraryHead.html
+++ b/src/main/resources/templates/fragments/libraryHead.html
@@ -18,5 +18,6 @@
   <script src="/webjars/form-flow/0.0.1/js/formFlowDropZone.js"></script>
   <script src="/webjars/form-flow/0.0.1/js/formFlowLanguageSelector.js"></script>
   <script src="/webjars/form-flow/0.0.1/js/formFlowDisableMultipleFormSubmit.js"></script>
+  <script src="/webjars/form-flow/0.0.1/js/formFlowFollowUpQuestion.js"></script>
 </th:block>
 </html>
