Fix cancel clearing and start investigating session cookie issue (#347)
* Fix cancel clearing and start investigating session cookie issue
* Remove cancelled files from session key
* Remove console logs
* Remove fake test

---------

Co-authored-by: Chibuisi Enyia <cenyia@codeforamerica.org>
Co-authored-by: Alex Gonzalez <agonzalez@codeforamerica.org>

--- a/src/main/resources/templates/fragments/fileUploader.html
+++ b/src/main/resources/templates/fragments/fileUploader.html
@@ -210,8 +210,11 @@
         if (fTD.name === file.name) {
           removeFileFromDropzone(file, id);
           sendDeleteXhrRequest(id);
+          window['cancelledFiles' + [[${inputName}]]] =
+              window['cancelledFiles' + [[${inputName}]]]
+              .filter(cancelledFile => cancelledFile.name !== file.name);
         }
-      })
+      });
     }
 
     function sendDeleteXhrRequest(id) {
