Fix checkboxfieldset variable and change checkboxinset help text to be utext

--- a/src/main/resources/templates/fragments/inputs/checkboxInSet.html
+++ b/src/main/resources/templates/fragments/inputs/checkboxInSet.html
@@ -31,7 +31,7 @@
       <span th:text="${label}"></span>
       <p th:if="${hasHelpText}"
          th:id="${id} + '-help-text'"
-         th:text="${checkboxHelpText}"
+         th:utext="${checkboxHelpText}"
          class="text--help with-no-padding"></p>
     </div>
   </label>
