Fix incorrect ID in aria-describedby of Text Area Input
Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>

--- a/src/main/resources/templates/fragments/inputs/textArea.html
+++ b/src/main/resources/templates/fragments/inputs/textArea.html
@@ -21,7 +21,7 @@
               type="textarea"
               class="textarea spacing-below-0"
               th:attr="
-                aria-describedby=${hasHelpText ? inputName + '-help-message' : ''},
+                aria-describedby=${hasHelpText ? inputName + '-help-text' : ''},
                 aria-labelledby=${hasAriaLabel ? ariaLabel : ''},
                 rows=${rows},
                 maxlength=${maxLength},
