Revert "Make firstScreen not null in test-landmark-flow.yaml"
This reverts commit 5638f4dd7e8749d724b33dda669ee1e7bc732ce5.

--- a/src/main/resources/templates/fragments/inputs/yesOrNo.html
+++ b/src/main/resources/templates/fragments/inputs/yesOrNo.html
@@ -11,7 +11,7 @@
   </div>
   <button
       th:name="${inputName}"
-      th:aria-describedby="${hasHelpText ? ariaDescribe + ' ' + inputName + '-help-text' : ariaDescribe}"
+      th:aria-describedby="${hasHelpText ? inputName + '-help-text' : ariaDescribe}"
       type="submit"
       value="true"
       class="button">
