--- a/src/main/resources/templates/fragments/inputs/yesOrNo.html
+++ b/src/main/resources/templates/fragments/inputs/yesOrNo.html
@@ -11,8 +11,7 @@
   </div>
   <button
       th:name="${inputName}"
-      th:aria-describedby="${hasHelpText ? inputName + '-help-text' : ariaDescribe}"
-      type="submit"
+      th:aria-describedby="${hasHelpText ? ariaDescribe + ' ' + inputName + '-help-text' : ariaDescribe}"      type="submit"
       value="true"
       class="button">
     <span class="button__icon--left emoji emoji--inline emoji--checkmark"></span>
@@ -20,8 +19,7 @@
   </button>
   <button
       th:name="${inputName}"
-      th:aria-describedby="${hasHelpText ? inputName + '-help-text' : ariaDescribe}"
-      value="false"
+      th:aria-describedby="${hasHelpText ? ariaDescribe + ' ' + inputName + '-help-text' : ariaDescribe}"      value="false"
       class="button">
     <span class="button__icon--left emoji emoji--inline emoji--crossmark"></span>
     <span th:text="#{general.inputs.no}"></span>
