Add xmlns:th attribute to any html tag

--- a/src/main/resources/templates/errors/devError.html
+++ b/src/main/resources/templates/errors/devError.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html th:lang="${#locale.language}">
+<html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head :: head(title=#{error.error})}"></head>
 <main>
   <h2 class="text--centered spacing-below-0" style="background-color: red; color: white">Internal
