--- a/src/test/resources/templates/uploadFlow/docUploadUnit.html
+++ b/src/test/resources/templates/uploadFlow/docUploadUnit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html th:lang="${#locale.language}">
+<html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head :: head(title='Upload Test')}"></head>
 <script src="https://code.jquery.com/qunit/qunit-2.19.3.js"></script>
 <script src="/webjars/form-flow/0.0.1/js/qunit-upload-tests.js"></script>
