--- a/src/test/resources/templates/testFlow/contactInfoPreference.html
+++ b/src/test/resources/templates/testFlow/contactInfoPreference.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html th:lang="${#locale.language}">
+<html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head :: head(title='contactInfo')}"></head>
 <body>
 <div class="page-wrapper">
