--- a/src/test/resources/templates/testFlowAddressValidation/testSubflowAddressValidation.html
+++ b/src/test/resources/templates/testFlowAddressValidation/testSubflowAddressValidation.html
@@ -1,4 +1,4 @@
-<html>
+<html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head :: head(title='Enter Address (subflow)')}"></head>
 <th:block th:replace="~{fragments/form :: form(action=${formAction}, content=~{::testAddress})}">
   <th:block th:ref="testAddress">
