--- a/src/test/resources/templates/uploadFlow/docUploadJourney.html
+++ b/src/test/resources/templates/uploadFlow/docUploadJourney.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html th:lang="${#locale.language}">
+<html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head :: head(title='Upload Documents')}"></head>
 <body th:with="dzFormName='uploadTest'">
 <div class="page-wrapper" id="uploadTest">
