Working on fixing tests.

--- a/src/main/resources/templates/fragments/fileUploader.html
+++ b/src/main/resources/templates/fragments/fileUploader.html
@@ -214,11 +214,11 @@
       });
     }
 
-    function sendDeleteXhrRequest(id) {
+    function sendDeleteXhrRequest(id, flow) {
       var xhrRequest = new XMLHttpRequest();
       xhrRequest.open('POST',
           '/file-delete?' + id + '&returnPath=' + window.location.pathname + '&inputName='
-          + [[${inputName}]], true);
+          + [[${inputName}]] + '&flow=' + flow, true);
       xhrRequest.withCredentials = false;
       xhrRequest.setRequestHeader("Accept", "*/*");
       xhrRequest.setRequestHeader("X-Requested-With", "XMLHttpRequest");
@@ -360,7 +360,7 @@
                 [[#{general.files.confirm-delete}]] + fileName + '. '
                 + [[#{general.files.confirm-delete-ok}]])
             if (confirmation) {
-              sendDeleteXhrRequest(id);
+              sendDeleteXhrRequest(id, [[${flow}]]);
               removeFileFromDropzone(file, id);
             }
           }
