Adds journey test for file uploads that cross flows.
Co-Authored-By: Alex Gonzalez; agonzalez@codeforamerica.org

--- a/src/main/resources/templates/fragments/fileUploader.html
+++ b/src/main/resources/templates/fragments/fileUploader.html
@@ -61,7 +61,7 @@
     window['myDropZone' + [[${inputName}]]] = null;
     window['userFileIds' + [[${inputName}]]] = [];
     window['cancelledFiles' + [[${inputName}]]] = [];
-    var userFiles = [[${session.userFiles}]]
+    var userFiles = [[${session.userFiles}]] != null ? JSON.parse([[${session.userFiles}]]) : null;
     var thumbnailWidthFromAppYml = [[${@environment.getProperty('form-flow.uploads.thumbnail-width')}]];
     var thumbnailHeightFromAppYml = [[${@environment.getProperty('form-flow.uploads.thumbnail-height')}]];
     var thumbnailWidth = thumbnailWidthFromAppYml ? thumbnailWidthFromAppYml : '64';
@@ -272,9 +272,8 @@
         window[dropzonePrefix + [[${inputName}]]] = this;
         var dzInstance = [[${inputName}]]
         var flow = [[${flow}]]
-        var documents = userFiles !== null ? JSON.parse(userFiles).userFileMap[flow][dzInstance]
-            : [];
-        
+        var documents = userFiles?.userFileMap?.[flow]?.[dzInstance] || [];
+
         if (documents != null && Object.entries(documents).length > this.options.maxFiles) {
           toggleMaxFileMessage('on');
         }
