--- a/src/test/resources/templates/otherTestFlow/inputs.html
+++ b/src/test/resources/templates/otherTestFlow/inputs.html
@@ -10,7 +10,7 @@
         <th:block
             th:replace="~{fragments/cardHeader :: cardHeader(header='Inputs Screen', subtext='This is the inputs screen!')}"/>
         <th:block
-            th:replace="~{fragments/form :: form(action='/flow/testFlow/inputs', content=~{::formContent})}">
+            th:replace="~{fragments/form :: form(action='/flow/otherTestFlow/inputs', content=~{::formContent})}">
           <th:block th:ref="formContent">
             <div class="form-card__content">
               <th:block
