--- a/src/main/resources/templates/fragments/fileUploader.html
+++ b/src/main/resources/templates/fragments/fileUploader.html
@@ -61,7 +61,7 @@
     window['myDropZone' + [[${inputName}]]] = null;
     window['userFileIds' + [[${inputName}]]] = [];
     window['cancelledFiles' + [[${inputName}]]] = [];
-    var userFiles = [[${session.userFiles}]]
+    var userFiles = [[${session.userFiles}]] != null ? JSON.parse([[${session.userFiles}]]) : null;
     var thumbnailWidthFromAppYml = [[${@environment.getProperty('form-flow.uploads.thumbnail-width')}]];
     var thumbnailHeightFromAppYml = [[${@environment.getProperty('form-flow.uploads.thumbnail-height')}]];
     var thumbnailWidth = thumbnailWidthFromAppYml ? thumbnailWidthFromAppYml : '64';
@@ -214,11 +214,11 @@
       });
     }
 
-    function sendDeleteXhrRequest(id) {
+    function sendDeleteXhrRequest(id, flow) {
       var xhrRequest = new XMLHttpRequest();
       xhrRequest.open('POST',
           '/file-delete?' + id + '&returnPath=' + window.location.pathname + '&inputName='
-          + [[${inputName}]], true);
+          + [[${inputName}]] + '&flow=' + flow, true);
       xhrRequest.withCredentials = false;
       xhrRequest.setRequestHeader("Accept", "*/*");
       xhrRequest.setRequestHeader("X-Requested-With", "XMLHttpRequest");
@@ -271,7 +271,8 @@
       init: function () {
         window[dropzonePrefix + [[${inputName}]]] = this;
         var dzInstance = [[${inputName}]]
-        var documents = userFiles !== null ? userFiles[dzInstance] : [];
+        var flow = [[${flow}]]
+        var documents = userFiles?.userFileMap?.[flow]?.[dzInstance] || [];
 
         if (documents != null && Object.entries(documents).length > this.options.maxFiles) {
           toggleMaxFileMessage('on');
@@ -343,7 +344,6 @@
         });
 
         this.on('maxfilesexceeded', function () {
-          console.log("maxfilesexceeded was emitted");
           toggleMaxFileMessage('on');
         });
 
@@ -360,7 +360,7 @@
                 [[#{general.files.confirm-delete}]] + fileName + '. '
                 + [[#{general.files.confirm-delete-ok}]])
             if (confirmation) {
-              sendDeleteXhrRequest(id);
+              sendDeleteXhrRequest(id, [[${flow}]]);
               removeFileFromDropzone(file, id);
             }
           }
