This adds `postfix` capabilities to both Money and Number Inputs.
Co-Authored-By: Lauren Kemperman; lkemperman@codeforamerica.org

--- a/src/main/resources/templates/fragments/inputs/money.html
+++ b/src/main/resources/templates/fragments/inputs/money.html
@@ -26,6 +26,7 @@
               aria-labelledby=${hasAriaLabel ? ariaLabel : ''},
               aria-invalid=${hasError}"
              th:value="${fieldData.getOrDefault(inputName, '')}">
+      <div th:if="${postfix != null}" th:text="${postfix}" class="text-input-group__postfix"></div>
     </div>
     <th:block
         th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
