WIP Working GET Screen as last screen in subflow
Co-authored-by: Martha Pidcock <mpidcock@codeforamerica.org>

--- a/src/main/resources/templates/fragments/continueButton.html
+++ b/src/main/resources/templates/fragments/continueButton.html
@@ -1,5 +1,6 @@
 <a th:fragment="continue"
-   th:href="'/flow/' + ${flow} + '/' + ${screen} + '/navigation'"
+   th:with="uuidQueryParam=${fieldData != null && fieldData.get('uuid') != null ? '?uuid=' + fieldData.get('uuid') : ''}"
+   th:href="'/flow/' + ${flow} + '/' + ${screen} + '/navigation' + ${uuidQueryParam}"
    th:text="${text} ? ${text} : #{general.inputs.continue}"
    class="button button--primary"
    id="continue-link"></a>
