Removing icons that are included with material-icons

--- a/src/main/resources/templates/fragments/icons.html
+++ b/src/main/resources/templates/fragments/icons.html
@@ -112,21 +112,6 @@
     </tr>
 
     <tr>
-      <td>clipboardCheck</td>
-      <td>
-        <svg th:fragment="clipboardCheck" width="18" height="22" viewBox="0 0 48 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <g clip-path="url(#clip0_36_2476)">
-            <path d="M38 6H29.63C28.81 3.68 26.61 2 24 2C21.39 2 19.19 3.68 18.37 6H10C7.79 6 6 7.79 6 10V38C6 40.21 7.79 42 10 42H38C40.21 42 42 40.21 42 38V10C42 7.79 40.21 6 38 6ZM24 6C25.1 6 26 6.89 26 8C26 9.11 25.1 10 24 10C22.9 10 22 9.11 22 8C22 6.89 22.9 6 24 6ZM20 34L12 26L14.83 23.17L20 28.34L33.17 15.17L36 18L20 34Z" fill="black"/>
-          </g>
-          <defs>
-            <clipPath id="clip0_36_2476">
-              <rect width="48" height="48" fill="white"/>
-            </clipPath>
-          </defs>
-        </svg>
-      </td>
-    </tr>
-    <tr>
       <td>address</td>
       <td>
         <svg th:fragment="address" aria-hidden="true" id="addressIcon" width="100"
@@ -142,14 +127,6 @@
           <path
               d="M49.8671 32C48.6264 32.0321 46.9645 31.5608 46.0233 31.254C45.5493 31.0996 45.0339 31.0986 44.583 31.3111C43.7911 31.6843 42.5769 32.3421 42.2425 33C41.7342 34.0001 41.7342 33.5 41.2259 36C40.9428 37.3925 40.9751 38.7851 41.0592 39.7455C41.1267 40.5159 41.7037 41.1164 42.4633 41.2619C44.01 41.5582 46.8263 42.0001 49.8671 42C52.6563 41.9999 55.0675 41.6282 56.5249 41.3381C57.4039 41.1631 57.999 40.381 57.9398 39.4867C57.8774 38.544 57.7503 37.272 57.4917 36C56.9834 33.5 56.9834 33.9999 56.4751 33C56.1739 32.4075 55.3373 31.815 54.7055 31.4304C54.2245 31.1376 53.6358 31.1194 53.1016 31.2975C52.2469 31.5825 50.8991 31.9733 49.8671 32Z"
               fill="#FFF7E3" stroke="black" stroke-width="3"/>
-        </svg>
-      </td>
-    </tr>
-    <tr>
-      <td>airplane</td>
-      <td>
-        <svg th:fragment="airplane" aria-hidden="true" id="airplaneIcon" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M28.6667 21.3334V18.6667L18 12V4.66669C18 3.56002 17.1067 2.66669 16 2.66669C14.8934 2.66669 14 3.56002 14 4.66669V12L3.33337 18.6667V21.3334L14 18V25.3334L11.3334 27.3334V29.3334L16 28L20.6667 29.3334V27.3334L18 25.3334V18L28.6667 21.3334Z" fill="#121111"/>
         </svg>
       </td>
     </tr>
@@ -1837,18 +1814,6 @@
         </svg>
       </td>
     </tr>
-
-    <tr>
-      <td>smallPersonIcon</td>
-      <td>
-        <svg th:fragment="smallPersonIcon" width="25" height="26" viewBox="0 0 25 26" fill="none"
-             xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-          <path
-              d="M12.5 13.0002C15.7229 13.0002 18.3333 10.1581 18.3333 6.66683C18.3333 3.16766 15.7229 0.333496 12.5 0.333496C9.27706 0.333496 6.66665 3.16766 6.66665 6.66683C6.66665 10.1581 9.27706 13.0002 12.5 13.0002ZM12.5 16.1668C8.61352 16.1668 0.833313 18.2806 0.833313 22.5002V25.6668H24.1666V22.5002C24.1666 18.2806 16.3864 16.1668 12.5 16.1668Z"
-              fill="black"/>
-        </svg>
-      </td>
-    </tr>
     <tr>
       <td>smallDoubleFileIcon</td>
       <td>
@@ -2203,6 +2168,18 @@
               <rect width="100" height="75" fill="white"/>
             </clipPath>
           </defs>
+        </svg>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        iconHouseOutlineTiny
+      </td>
+      <td>
+        <svg th:fragment="iconHouseOutlineTiny" width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M3.26356 7.7477H0.792969L9.02826 0.335938L17.2636 7.7477H14.793V14.3359H9.85179V9.39476H8.20473V14.3359H3.26356V7.7477ZM13.1459 6.25689L9.02826 2.55101L4.91062 6.25689V12.6887H6.55767V7.74748H11.4989V12.6887H13.1459V6.25689Z"
+                fill="black"/>
         </svg>
       </td>
     </tr>
