update submitButton fragment

--- a/src/main/resources/templates/fragments/inputs/submitButton.html
+++ b/src/main/resources/templates/fragments/inputs/submitButton.html
@@ -4,5 +4,6 @@
   <button id="form-submit-button"
           th:class="${classes != null ? classes : 'button button--primary'}"
           type="submit"
-          th:text="${text}"></button>
+          th:text="${text}"
+          th:classappend="${isHidden}? 'display-none'"></button>
 </th:block>
