--- a/src/main/resources/templates/fragments/inputs/address.html
+++ b/src/main/resources/templates/fragments/inputs/address.html
@@ -6,7 +6,7 @@
     city=${inputName + T(formflow.library.inputs.AddressParts).CITY.toString()},
     state=${inputName + T(formflow.library.inputs.AddressParts).STATE.toString()},
     zipCode=${inputName + T(formflow.library.inputs.AddressParts).ZIPCODE.toString()},
-    validateAddressInputName=${T(formflow.library.inputs.UnvalidatedField).VALIDATE_ADDRESS + inputName}"
+    validateAddressInputName=${T(formflow.library.inputs.FieldNameMarkers).UNVALIDATED_FIELD_MARKER_VALIDATE_ADDRESS + inputName}"
 >
   <th:block th:replace="~{fragments/inputs/text ::
                   text(inputName=${streetAddress},
