--- a/src/main/resources/templates/fragments/honeycrisp/reveal.html
+++ b/src/main/resources/templates/fragments/honeycrisp/reveal.html
@@ -1,10 +1,10 @@
 <th:block
     th:fragment="reveal"
-    th:with="controlId=${controlId == null ? 'r1' : controlId}"
+    th:with="controlId=${controlId == null ? 'r1' : controlId}, forceShowContent=${forceShowContent == null ? '' : 'force-show-content'}"
     th:assert="
       ${!#strings.isEmpty(linkLabel)},
       ${!#strings.isEmpty(content)}">
-  <div class="reveal reveal-adjacent reveal__border">
+  <div class="reveal reveal-adjacent reveal__border" th:classappend="${forceShowContent}">
     <a href="#" class="reveal__link reveal__link__header-adjacent" aria-expanded="false"
        aria-controls="reveal-content">
       <th:block th:replace="${linkLabel}"></th:block>
