--- a/src/main/resources/templates/fragments/inputs/address.html
+++ b/src/main/resources/templates/fragments/inputs/address.html
@@ -1,32 +1,42 @@
 <th:block
     th:fragment="address(validate, inputName)"
     th:with="
-    streetAddress=${inputName + T(formflow.library.inputs.AddressParts).STREET_ADDRESS_1.toString()},
-    streetAddress2=${inputName + T(formflow.library.inputs.AddressParts).STREET_ADDRESS_2.toString()},
-    city=${inputName + T(formflow.library.inputs.AddressParts).CITY.toString()},
-    state=${inputName + T(formflow.library.inputs.AddressParts).STATE.toString()},
-    zipCode=${inputName + T(formflow.library.inputs.AddressParts).ZIPCODE.toString()},
+    streetAddressLabelDefault=#{address.street-address-1},
+    streetAddress2LabelDefault=#{address.street-address-2},
+    cityLabelDefault=#{address.city},
+    stateLabelDefault=#{address.state},
+    zipCodeLabelDefault=#{address.zip},
+    streetAddressLabel=${!#strings.isEmpty(streetAddressLabel) ? streetAddressLabel : streetAddressLabelDefault},
+    streetAddress2Label=${!#strings.isEmpty(streetAddress2Label) ? streetAddress2Label : streetAddress2LabelDefault},
+    cityLabel=${!#strings.isEmpty(cityLabel) ? cityLabel : cityLabelDefault},
+    stateLabel=${!#strings.isEmpty(stateLabel) ? stateLabel : stateLabelDefault},
+    zipCodeLabel=${!#strings.isEmpty(zipCodeLabel) ? zipCodeLabel : zipCodeLabelDefault},
+    streetAddressInputName=${inputName + T(formflow.library.inputs.AddressParts).STREET_ADDRESS_1.toString()},
+    streetAddress2InputName=${inputName + T(formflow.library.inputs.AddressParts).STREET_ADDRESS_2.toString()},
+    cityInputName=${inputName + T(formflow.library.inputs.AddressParts).CITY.toString()},
+    stateInputName=${inputName + T(formflow.library.inputs.AddressParts).STATE.toString()},
+    zipCodeInputName=${inputName + T(formflow.library.inputs.AddressParts).ZIPCODE.toString()},
     validateAddressInputName=${T(formflow.library.inputs.FieldNameMarkers).UNVALIDATED_FIELD_MARKER_VALIDATE_ADDRESS + inputName}"
 >
   <th:block th:replace="~{fragments/inputs/text ::
-                  text(inputName=${streetAddress},
-                  label=#{address.street-address-1},
+                  text(inputName=${streetAddressInputName},
+                  label=${streetAddressLabel},
                   helpText=${streetAddressHelpText})}"/>
   <th:block th:replace="~{fragments/inputs/text ::
-                  text(inputName=${streetAddress2},
-                  label=#{address.street-address-2},
+                  text(inputName=${streetAddress2InputName},
+                  label=${streetAddress2Label},
                   helpText=${streetAddress2HelpText})}"/>
   <th:block th:replace="~{fragments/inputs/text ::
-                  text(inputName=${city},
-                  label=#{address.city},
+                  text(inputName=${cityInputName},
+                  label=${cityLabel},
                   helpText=${cityHelpText})}"/>
   <th:block th:replace="~{fragments/inputs/state ::
-                  state(inputName=${state},
-                  label=#{address.state},
+                  state(inputName=${stateInputName},
+                  label=${stateLabel},
                   helpText=${stateHelpText})}"/>
   <th:block th:replace="~{fragments/inputs/text ::
-                  text(inputName=${zipCode},
-                  label=#{address.zip},
+                  text(inputName=${zipCodeInputName},
+                  label=${zipCodeLabel},
                   helpText=${zipCodeHelpText})}"/>
   <input type="hidden"
          th:name="${validateAddressInputName}"
