--- a/src/main/resources/templates/fragments/inputs/number.html
+++ b/src/main/resources/templates/fragments/inputs/number.html
@@ -10,7 +10,7 @@
         errorMessages != null &&
         errorMessages.get(inputName) != null &&
         (#arrays.length(errorMessages.get(inputName)) > 0) }"
-    th:assert="${!#strings.isEmpty(inputName)},, ${hasLabel || hasAriaLabel}">
+    th:assert="${!#strings.isEmpty(inputName)}, ${hasLabel || hasAriaLabel}">
   <div th:class="'form-group' + ${(hasError ? ' form-group--error' : '')}">
     <label th:if="${hasLabel}" th:for="${inputName}" th:text="${label}" class="form-question"/>
     <p class="text--help"
