Fixes aspect ratio scaling for small house icon (#435)
* Fixes aspect ratio scaling for small house icon

* Fixes aspect ratio scaling for small house icon

--- a/src/main/resources/templates/fragments/icons.html
+++ b/src/main/resources/templates/fragments/icons.html
@@ -1807,10 +1807,8 @@
     <tr>
       <td>smallHouseIcon</td>
       <td>
-        <svg th:fragment="smallHouseIcon" width="30" height="26" viewBox="0 0 30 26" fill="none"
-             xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-          <path d="M12 25.2273V16.3235H18V25.2273H25.5V13.355 6H30L15 0L0 13.3556H4.5V25.2273H12Z"
-                fill="black"/>
+        <svg th:fragment="smallHouseIcon" aria-hidden="true" width="32" height="32" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M16.2 36V24.7059H23.8V36H33.3V20.9412H39L20 4L1 20.9412H6.7V36H16.2Z" fill="black"></path>
         </svg>
       </td>
     </tr>
