WIP More tests and Build Time error handling!
[#186001975]

Co-authored-by: Cypress Borg <cborg@codeforamerica.org>

--- a/src/main/resources/templates/fragments/fileUploader.html
+++ b/src/main/resources/templates/fragments/fileUploader.html
@@ -331,7 +331,7 @@
           formData.append("_csrf", csrfToken);
           formData.append("type", file.type);
           formData.append("flow", [[${flow}]]);
-          formData.append("subflow", [[${subflow}]]);
+          formData.append("screen", [[${screen}]]);
           formData.append("inputName", [[${inputName}]]);
           formData.append("thumbDataURL", file.dataURL);
         })
