Fix error where any page with the word "submit" in it would cause the submission to submit

--- a/src/test/resources/templates/testFlow/pageWithCustomSubmitButton.html
+++ b/src/test/resources/templates/testFlow/pageWithCustomSubmitButton.html
@@ -10,7 +10,7 @@
         <th:block
             th:replace="~{fragments/cardHeader :: cardHeader(header='Page with optional validation')}"/>
         <th:block
-            th:replace="~{fragments/form :: form(action=${formAction + '/submit'}, content=~{::formContent})}">
+            th:replace="~{fragments/form :: form(action=${formAction} + '/submit', content=~{::formContent})}">
           <th:block th:ref="formContent">
             <div class="form-card__footer">
               <th:block th:replace="~{fragments/inputs/submitButton :: submitButton(
