Internationalize skip to content link
- Add translation keys
- Update link to use translation text

--- a/src/main/resources/templates/fragments/toolbar.html
+++ b/src/main/resources/templates/fragments/toolbar.html
@@ -2,7 +2,8 @@
   <header class="main-header toolbar__wrapper">
     <div class="toolbar">
       <div class="toolbar__left spacing-above-0">
-        <a href="#content" id="skip-to-content" class="button button--small">Skip to content</a>
+        <a href="#content" id="skip-to-content" class="button button--small"
+           th:text="#{general.skip-to-content}"></a>
         <a class="logo" href="/">
           <img src="/webjars/form-flow/0.0.1/images/code-for-america-logo_white.svg"
                alt="Code for America logo"
